manifests/samples/secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep4
  labels:
     day: day4
     sample: secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      day: day4
      sample: secrets
      layer: dep4
  template:
    metadata:
      labels:
        day: day4
        sample: secrets
        layer: dep4
    spec:
      volumes:
        - name: secvol
          secret:
            secretName: sec1
      containers:
        - name: c1
          image: nginx:alpine
          volumeMounts:
            - name: secvol
              mountPath: /very/secret
