manifests/samples/hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  labels:
    sample: horizontalpodautoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      sample: horizontalpodautoscaler
      layer: backend
  template:
    metadata:
      labels:
        sample: horizontalpodautoscaler
        layer: backend
    spec:
      containers:
        - name: c1
          image: quay.io/rajch/ldgen:0.2.1
          resources:
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    sample: horizontalpodautoscaler
spec:
  type: NodePort
  selector:
    sample: horizontalpodautoscaler
    layer: backend
  ports:
    - name: web
      port: 8080
      nodePort: 31000
