manifests/samples/probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: probes-dep
  labels:
    day: day5
    sample: probes
spec:
  replicas: 1
  selector:
    matchLabels:
      day: day5
      sample: probes
      layer: probes-dep
  template:
    metadata:
      labels:
        day: day5
        sample: probes
        layer: probes-dep
    spec:
      containers:
        - name: c1
          image: quay.io/rajch/probestest:0.2.1
          # livenessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /probes/liveness
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /probes/readiness
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: probes-svc
  labels:
    day: day5
    sample: probes
spec:
  type: NodePort
  selector:
    day: day5
    sample: probes
    layer: probes-dep
  ports:
    - name: probestest
      port: 8080
      nodePort: 31000
