manifests/samples/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmq-hs
  labels:
    day: five
    sample: rmq-sts
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    day: five
    sample: rmq-sts
    layer: backend
  ports:
    - name: management
      port: 15672
    - name: amqp
      port: 5672
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rmq-sts
  labels:
    day: five
    sample: rmq-sts
spec:
  serviceName: rmq-hs
  replicas: 2
  selector:
    matchLabels:
      day: five
      sample: rmq-sts
      layer: backend
  template:
    metadata:
      labels:
        day: five
        sample: rmq-sts
        layer: backend
    spec:
      containers:
        - name: c1
          image: rabbitmq:3.10-management-alpine
          volumeMounts:
            - name: rmq-vol
              mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
    - metadata:
        name: rmq-vol
        labels:
          day: five
          sample: rmq-sts
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: kuttiproject-local-delete
---
apiVersion: v1
kind: Service
metadata:
  name: rmq-np
  labels:
    day: five
    sample: rmq-sts
spec:
  type: NodePort
  selector:
    day: five
    sample: rmq-sts
    layer: backend
  ports:
    - name: management
      port: 15672
      nodePort: 31300
    - name: amqp
      port: 5672
