manifests/samples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  labels:
    day: day5
    sample: ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: applications.in
    http:
      paths:
      - pathType: Prefix
        path: "/dbapp"
        backend:
          service:
            name: fe-svc
            port: 
              number: 8080
      - pathType: Prefix
        path: "/apache"
        backend:
          service:
            name: svc2
            port: 
              number: 80
